--- a/volume/storageClass.yaml
+++ b/volume/storageClass.yaml
@@ -2,7 +2,7 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: gke-storage
-provisioner: kubernetes.io/no-provisioner
+provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
   zones: us-central1-a
