--- a/podAndRs/nodeselect-pod.yaml
+++ b/podAndRs/nodeselect-pod.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod
+  name: nodesel-pod
   labels:
-    app: myapp
+    app: nodesel
 spec:
   nodeSelector:
     gpu: "true"
   containers:
-  - name: myapp-container
+  - name: nodesel-container
     image: busybox
     command: ["/bin/sh"]
-    args: ["-c", "while true; do echo hello; sleep 5;done"]
+    args: ["-c", "while true; do echo nodesel; sleep 5;done"]
