--- a/podAndRs/rs.yaml
+++ b/podAndRs/rs.yaml
@@ -38,3 +38,12 @@ spec:
           - name: MY_POD_NAMESPACE
             valueFrom:
               fieldRef:
+                fieldPath: metadata.namespace
+          - name: MY_POD_IP
+            valueFrom:
+              fieldRef:
+                fieldPath: status.podIP
+          - name: MY_POD_SERVICE_ACCOUNT
+            valueFrom:
+              fieldRef:
+                fieldPath: spec.serviceAccountName
